+++++++++++
Python News
+++++++++++

What's New in Python 3.2 Beta 1?
================================

*Release date: XX-Dec-2010*

Core and Builtins
-----------------

- Issue #10518: Bring back the callable() builtin.

- Issue #8879. Add os.link support for Windows.

- Issue #10027. st_nlink was not being set on Windows calls to os.stat or
  os.lstat. Patch by Hirokazu Yamamoto.

- Issue #7094: Added alternate formatting (specified by '#') to
  __format__ method of float, complex, and Decimal. This allows more
  precise control over when decimal points are displayed.

- Issue #10474: range().count() should return integers.

- Issue #10255: Fix reference leak in Py_InitializeEx().  Patch by Neil
  Schemenauer.

- Issue #4925: Add filename to error message when executable can't be found in
  subprocess.

- Issue #1574217: isinstance now catches only AttributeError, rather than
  masking all errors.

- Issue #10391: Don't dereference invalid memory in error messages in the ast
  module.

- Issue #9518: Extend the PyModuleDef_HEAD_INIT macro to explicitly
  zero-initialize all fields, fixing compiler warnings seen when building
  extension modules with gcc with "-Wmissing-field-initializers" (implied
  by "-W")

Library
-------

- Issue #9873: The URL parsing functions in urllib.parse now accept
  ASCII byte sequences as input in addition to character strings.

- Issue #10586: The statistics API for the new functools.lru_cache has
  been changed to a single cache_info() method returning a named tuple.

- Issue #10323: itertools.islice() now consumes the minimum number of
  inputs before stopping.  Formerly, the final state of the underlying
  iterator was undefined.

- Issue #10565: The collections.Iterator ABC now checks for both
  __iter__ and __next__.

- Issue #10242: Fixed implementation of unittest.ItemsEqual and gave it
  a new more informative name, unittest.CountEqual.

- Issue #10561: In pdb, clear the breakpoints by the breakpoint number.
